Modules/LancetHardwareDevice/DianaApi/include/DianaApiCommon.h

DIANA_API int setPushPeriod(int intPeriod, /*IN*/ const char *strIpAddress = "");  // 设置状态推送频率
DIANA_API int moveTCP(/*IN*/ tcp_direction_e d, /*IN*/ double v, /*IN*/ double a,
                      /*IN[6]*/ double *active_tcp = nullptr,
                      /*IN*/ const char *strIpAddress = "");
DIANA_API int rotationTCP(/*IN*/ tcp_direction_e d, /*IN*/ double v, /*IN*/ double a,
                          /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int moveJoint(/*IN*/ joint_direction_e d, /*IN*/ int i, /*IN*/ double v, /*IN*/ double a,
                        /*IN*/ const char *strIpAddress = "");
#define moveJ moveJToTarget
#define moveL moveLToPose
DIANA_API int speedJ(/*IN[7]*/ double *speed, /*IN*/ double a, /*option*/ double t,
                     /*IN*/ const char *strIpAddress = "");
DIANA_API int speedL(/*IN[6]*/ double *speed, /*IN[2]*/ double *a, /*option*/ double t,
                     /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointPos(/*OUT[7]*/ double *joints, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointAngularVel(/*OUT[7]*/ double *vels, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointCurrent(/*OUT[7]*/ double *currents, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointTorque(/*OUT[7]*/ double *torques, /*IN*/ const char *strIpAddress = "");
DIANA_API int getTcpPos(/*OUT[6]*/ double *pose, /*IN*/ const char *strIpAddress = "");
DIANA_API double getTcpExternalForce(const char *strIpAddress = "");
DIANA_API int holdBrake(const char *strIpAddress = "");  // powerOff
DIANA_API int changeControlMode(
    mode_e m, /*IN*/ const char *strIpAddress = "");  // ChangeMode:Position, JointImpedance, CartImpedance
DIANA_API unsigned short getLibraryVersion();
DIANA_API const char *formatError(int e, /*IN*/ const char *strIpAddress = "");
DIANA_API int getLastError(const char *strIpAddress = "");