Plugins/org.mitk.lancet.CZXtest/DianaApi/X64/include/DianaApiSpecial.h

DIANA_API int moveJToTarget(/*IN[7]*/ double *joints, /*IN*/ double v, /*IN*/ double a, /*IN*/ int zv_shaper_order = 0,
                            /*IN*/ double zv_shaper_frequency = 0, /*IN*/ double zv_shaper_damping_ratio = 0,
                            /*IN*/ const char *strIpAddress = "");
DIANA_API int moveJToPose(/*IN[6]*/ double *pose, /*IN*/ double v, /*IN*/ double a,
                          /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ int zv_shaper_order = 0,
                          /*IN*/ double zv_shaper_frequency = 0, /*IN*/ double zv_shaper_damping_ratio = 0,
                          /*IN*/ const char *strIpAddress = "");
DIANA_API int moveLToTarget(/*IN[7]*/ double *joints, /*IN*/ double v, /*IN*/ double a, /*IN*/ int zv_shaper_order = 0,
                            /*IN*/ double zv_shaper_frequency = 0, /*IN*/ double zv_shaper_damping_ratio = 0,
                            /*IN*/ bool avoid_singular = false,
                            /*IN*/ const char *strIpAddress = "");
DIANA_API int moveLToPose(/*IN[6]*/ double *pose, /*IN*/ double v, /*IN*/ double a,
                          /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ int zv_shaper_order = 0,
                          /*IN*/ double zv_shaper_frequency = 0, /*IN*/ double zv_shaper_damping_ratio = 0,
                          /*IN*/ bool avoid_singular = false,
                          /*IN*/ const char *strIpAddress = "");
DIANA_API int freeDriving(unsigned char mode, /*IN*/ const char *strIpAddress = "");
DIANA_API int stop(const char *strIpAddress = "");
DIANA_API int forward(/*IN[7]*/ double *joints, /*OUT[6]*/ double *pose, /*IN[6]*/ double *active_tcp = nullptr,
                      /*IN*/ const char *strIpAddress = "");
DIANA_API int inverse(/*IN[6]*/ double *pose, /*OUT[7]*/ double *joints, /*IN[6]*/ double *active_tcp = nullptr,
                      /*IN*/ const char *strIpAddress = "");
DIANA_API int releaseBrake(const char *strIpAddress = "");  // powerOn